Renamed POS Number to POS, per WT:ELE <-ica#64651044>

--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -57,12 +57,12 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 * {{la-IPA|ann=1}}
 * {{la-IPA|-icā|ann=1}}
 
-===Suffix 1===
+===Suffix===
 {{la-suffix-form|-ica}}
 
 # {{inflection of|la|-icus||nom//voc|f|s|;|nom//acc//voc|n|p}}
 
-===Suffix 2===
+===Suffix===
 {{la-suffix-form|-icā}}
 
 # {{inflection of|la|-icus||abl|f|s}}
