t+mk:[[еднополов]] ([[WT:EDIT|Assisted]]) <unisexual#64657442>

--- a/en/u/unisexual.802726.wikitext
+++ b/en/u/unisexual.802726.wikitext
@@ -30,6 +30,7 @@
 {{trans-mid}}
 * Italian: {{t|it|unisessuale}}
 * Japanese: {{t+|ja|単性|tr=たんせいの, tansei no|alt=単性の|sc=Jpan}}
+* Macedonian: {{t|mk|еднополов}}
 * Polish: {{t|pl|jednopłciowy}}
 * Portuguese: {{t+|pt|unissexuado}}, {{t+|pt|unissexual}}
 * Russian: {{t+|ru|однопо́лый}}
