--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -134,6 +134,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Gamilaraay: {{t|kld|bina gaarr}}
 * Georgian: {{t|ka|ბოცვერი|sc=Geor}}, {{t+|ka|კურდღელი|sc=Geor}}
 * German: {{t+|de|Kaninchen|n}}, {{t+|de|Karnickel|n}} {{qualifier|colloquial}}, {{t|de|Schlappohr|n}} {{qualifier|humorous}}
+*: Alemannic German: {{t|gsw|Chünel|m}}
 * Greek: {{t+|el|κουνέλι|n}}
 *: Ancient: {{t|grc|δασύπους|m}}, {{t|grc|λεβηρίς|f}}, {{q|Koine}} {{t|grc|κούνικλος|m}}
 * Greenlandic: {{t|kl|kaniina}}, {{t|kl|ukalinnguaq}}
