t+mos:[[yãremde]] ([[WT:EDIT|Assisted]]) <quadrilateral#64666981>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -59,6 +59,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Macedonian: {{t|mk|четириаголник|m}}
 * Malay: {{t+|ms|segi empat}}, {{t|ms|caturkona}}, {{t|ms|tetragon}}
 * Maori: {{t|mi|tapawhā}}
+* Moore: {{t|mos|yãremde}}
 * Norwegian:
 *: Bokmål: {{t+|nb|firkant|m}}
 *: Nynorsk: {{t|nn|firkant|m}}
