t+vi:[[phần]] t-balance t+vi:[[tỷ lệ]] ([[WT:EDIT|Assisted]]) <fraction#64674002>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -125,8 +125,8 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Japanese: {{t|ja|断片|tr=だんぺん, danpen}}
 * Ladin: {{t-needed|lld}}
 * Lao: {{t|lo|ແຕ່ສ່ວນຫນຶ່ງ}}
-{{trans-mid}}
 * Latvian: {{t|lv|daļskaitlis|m}}
+{{trans-mid}}
 * Macedonian: {{t|mk|дел|m}}, {{t|mk|делче|n}}
 * Maori: {{t|mi|hautanga}}
 * Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}
@@ -145,6 +145,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Tagalog: {{t|tl|praksiyon}}; {{t+|tl|parte}}; {{t+|tl|bahagi}}
 * Turkish: {{t+|tr|bölüm}}, {{t+|tr|kısım}}, {{t+|tr|parça}}
 * Ukrainian: {{t+|uk|части́на|f}}
+* Vietnamese: {{t+|vi|phần}}, {{t+|vi|tỷ lệ}}
 {{trans-bottom}}
 
 {{trans-top|arithmetic: ratio}}
