--- a/en/u/unexpectedness.742224.wikitext
+++ b/en/u/unexpectedness.742224.wikitext
@@ -11,8 +11,7 @@
 #*: For one of the chief accounts, upon which Wit it self is delightful, is, in very many cases, the '''unexpectedness''' of the things that please us; that '''unexpectedness''' being the highest Degree of Novelty, which, as I freshly noted, does exceedingly gratifie most Men’s minds.
 #* '''1789''', {{w|Olaudah Equiano}}, ''{{w|The Interesting Narrative of the Life of Olaudah Equiano}}'', London, Chapter 4, p. 174,<sup>[http://name.umdl.umich.edu/004837188.0001.001]</sup>
 #*: {{...}} all in an instant, without having before given me the least reason to suspect any thing of the matter, he forced me into the barge; saying, I was going to leave him, but he would take care I should not. I was so struck with the '''unexpectedness''' of this proceeding, that for some time I did not make a reply {{...}}
-#* '''1881''', {{w|Henry James}}, ''{{w|The Portrait of a Lady}}'', London: Macmillan, Volume 2, Chapter 9, p. 125,<sup>[https://archive.org/details/portraitoflady02jamerich]</sup>
-#*: {{...}} he perceived a new attraction in the idea of taking to himself a young lady who had qualified herself to figure in his collection of choice objects by rejecting the splendid offer of a British aristocrat. Gilbert Osmond had a high appreciation of the British aristocracy—he had never forgiven Providence for not making him an English duke—and could measure the '''unexpectedness''' of this conduct.
+#* {{RQ:James Portrait|volume=2|chapter=9|page=125|passage={{...}} he perceived a new attraction in the idea of taking to himself a young lady who had qualified herself to figure in his collection of choice objects by rejecting the splendid offer of a British aristocrat. Gilbert Osmond had a high appreciation of the British aristocracy—he had never forgiven Providence for not making him an English duke—and could measure the '''unexpectedness''' of this conduct.}}
 #* '''1959''', {{w|Muriel Spark}}, ''{{w|Memento Mori (novel)|Memento Mori}}'', London: Macmillan, Chapter Five,
 #*: The '''unexpectedness''' of Mrs. Pettigrew’s gentle voice was due to her heavily-marked appearance.
 
