--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -78,10 +78,11 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 #* '''1959''', {{w|William S. Burroughs}}, ''{{w|Naked Lunch}}'', 50th anniversary edition (2009), [http://books.google.de/books?id=qcTZ1ZCT-S8C&lpg=PA126&pg=PA126#v=onepage&q&f=false p.&nbsp;126]:
 #*: “Oh Gertie it’s true. It’s all true. They’ve got a horrid gash instead of a thrilling '''thing'''.”
 # A [[living]] [[being]] or [[creature]].
-#* {{quote-journal|en|date=2013-08-03|volume=408|issue=8847|magazine={{w|The Economist}}
-|title=[http://www.economist.com/news/finance-and-economics/21582512-explosion-start-ups-changing-finance-better-revenge-nerds Revenge of the nerds]
-|passage=Think of banking today and the image is of grey-suited men in towering skyscrapers. Its future, however, is being shaped in converted warehouses and funky offices in San Francisco, New York and London, where bright young '''things''' in jeans and T-shirts huddle around laptops, sipping lattes or munching on free food.}}
-#: {{ux|en|you poor '''thing''';&nbsp; she's a funny old '''thing''', but her heart's in the right place;&nbsp; I met a pretty blond '''thing''' at the bar}}
+#: {{ux|en|you [[poor thing|poor '''thing''']]}}
+#: {{ux|en|[[sweet young thing|sweet young '''thing''']]}}
+#: {{ux|en|she's a funny old '''thing''', but her heart's in the right place}}
+#: {{ux|en|I met a pretty blond '''thing''' at the bar}}
+#* {{quote-journal|en|date=2013-08-03|volume=408|issue=8847|magazine={{w|The Economist}}|title=Revenge of the nerds|url=http://www.economist.com/news/finance-and-economics/21582512-explosion-start-ups-changing-finance-better-revenge-nerds|passage=Think of banking today and the image is of grey-suited men in towering skyscrapers. Its future, however, is being shaped in converted warehouses and funky offices in San Francisco, New York and London, where bright young '''things''' in jeans and T-shirts huddle around laptops, sipping lattes or munching on free food.}}
 # That which matters; the [[crux]].
 #: {{ux|en|that's the '''thing''': we don't know where he went;&nbsp; the '''thing''' is, I don't have any money}}
 # {{non-gloss definition|Used after a noun to refer dismissively to the situation surrounding the noun's referent.}}
