--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -77,6 +77,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * {{desc|it|staff|bor=1}}
 * {{desc|ja|スタッフ|tr=sutaffu|bor=1}}
 * {{desc|ko|스태프|bor=1}}
+* {{desc|pt|stafe|bor=1|alts=1}}
 * {{desc|es|staff|bor=1}}
 
 =====Translations=====
@@ -200,7 +201,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 *: Bokmål: {{t|nb|ansatte}}
 * Persian: {{t+|fa|پرسنل|tr=personel|sc=fa-Arab}}, {{t+|fa|کادر|tr=kâdr|sc=fa-Arab}}
 * Polish: {{t+|pl|personel|m}}, {{t|pl|pracownicy|p}}
-* Portuguese: {{t+|pt|pessoal|m}}, {{t+|pt|equipe}}, {{t+|pt|staff|m}}, {{t|pt|stafe|m}} {{qualifier|Portugal}}, {{t+|pt|estafe|m}} {{qualifier|Brazil}}
+* Portuguese: {{t+|pt|pessoal|m}}, {{t+|pt|staff|m}}, {{t|pt|stafe|m}} {{qualifier|Portugal}}, {{t+|pt|estafe|m}} {{qualifier|Brazil}}
 * Romanian: {{t+|ro|personal|n}}
 * Russian: {{t+|ru|персона́л|m}}, {{t+|ru|кадр|alt=ка́дры|m-p}}, {{t+|ru|штат|m}}
 * Serbo-Croatian:
