--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -233,7 +233,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 #: {{uxi|ga|Sirim an tAthair.|I beseech the Father.}}
 
 =====Conjugation=====
-{{ga-conj|s|ir|q=slender|stem=ir|vn=sireadh}}
+{{ga-conj-1a|s|ir|q=slender|stem=ir|vn=sireadh}}
 
 ----
 
