/* Related terms */ [[enough to make a rabbit bite a bulldog]] <rabbit#64684625>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -57,6 +57,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 =====Related terms=====
 {{rel4|en|breed like rabbits
 |buy the rabbit
+|enough to make a rabbit bite a bulldog
 |fuck like rabbits
 |kill the rabbit
 |pull a rabbit out of a hat
