--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -112,6 +112,7 @@ From medieval {{etyl|la|en}} {{m|la|Bosphorus}}, from {{etyl|grc|en}} {{m|grc|Β
 {{trans-bottom}}
 
 [[Category:en:Exonyms]]
+[[Category:en:Istanbul]]
 [[Category:en:Straits]]
 [[Category:en:Turkey]]
 
