--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -74,7 +74,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 * Indonesian: {{t+|id|kulit}}
 * Interlingua: {{t|ia|corio}}
 * Irish: {{t|ga|leathar|m}}
-*: Old Irish: {{t|sga|lethar}}
+*: Middle Irish: {{t|mga|lethar}}
 * Italian: {{t+|it|cuoio|m}}
 * Japanese: {{t+|ja|皮革|tr=ひかく, hikaku}}, {{t+|ja|革|tr=かわ, kawa}}
 * Kannada: {{t+|kn|ಚರ್ಮ}}
