--- a/en/e/energy carrier.776563.wikitext
+++ b/en/e/energy carrier.776563.wikitext
@@ -12,4 +12,5 @@
 * Finnish: {{t|fi|energianlähde}}
 {{trans-mid}}
 * German: {{t+|de|Energieträger|m}}
+* Ukrainian: {{t|uk|енергоносі́й}}
 {{trans-bottom}}
