--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -188,6 +188,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Macedonian: {{t|mk|дува|impf}}
 * Malay: {{t+|ms|tiup}}, {{t|ms|hembus}}
 * Mansaka: {{t|msk|oyop}}
+* Manchu: {{t|mnc|ᡶᡠᠯᡤᡳᠶᡝᠮᠪᡳ}}
 * Maori: {{t|mi|ihi}}
 * Mongolian: {{t+|mn|үлээх}}
 * Nanai: {{t|gld|пу-}}, {{t|gld|пиуги-}}
