t+gld:[[дяка]] t-balance ([[WT:EDIT|Assisted]]) <thing#64701570>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -221,9 +221,9 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Khmer: {{t+|km|របស់}}, {{t+|km|វត្ថុ}}
 * Korean: {{t+|ko|물건}}, {{t+|ko|것}}
 * Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
-{{trans-mid}}
 * Ladin: {{t|lld|cossa|f}}
 * Ladino: {{t|lad|koza}}
+{{trans-mid}}
 * Lao: {{t|lo|ສິ່ງ}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
 * Latvian: {{t|lv|lieta}}
@@ -238,6 +238,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Mirandese: {{t|mwl|cousa|f}}
 * Mongolian: {{t+|mn|зүйл|sc=Cyrl}}, {{t+|mn|юм|sc=Cyrl}}
 * Mwani: {{t|wmw|kinu}}
+* Nanai: {{t|gld|дяка}}
 * Nepali: {{t|ne|वस्तु|f}}
 * Norwegian: {{t+|no|ting|m}}, {{t|no|dings|m}}, {{t+|no|greie|f}}
 *: Nynorsk: {{t|nn|ting|m}}
