--- a/en/s/soldados.855915.wikitext
+++ b/en/s/soldados.855915.wikitext
@@ -7,6 +7,22 @@
 
 ----
 
+==Bikol Central==
+
+===Etymology===
+Borrowed from {{bor|tl|es|soldados}}, plural of {{m|es|soldado||soldier}}.
+
+===Pronunciation===
+* {{hyph|bcl|sol|da|dos}}
+* {{bcl-IPA}}
+
+===Noun===
+{{head|bcl|noun}}
+
+# [[soldier]]
+
+----
+
 ==Portuguese==
 
 ===Adjective===
