--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -44,6 +44,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|transitive|with "up"|or|with prep phrase headed by "to"}} To cause to explode, shatter, or be utterly destroyed.
 #: {{ux|en|The demolition squad neatly '''blew''' the old hotel up.}}
 #: {{ux|en|The aerosol can was '''blown''' to bits.}}
+# {{lb|en|transitive|historical|military|of a person}} To [[blow from a gun]].
 # {{lb|en|transitive}} To cause the sudden destruction of.
 #: {{ux|en|He '''blew''' the tires and the engine.}}
 # {{lb|en|intransitive}} To suddenly fail destructively.
