--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -175,7 +175,7 @@ Likely a shift from {{inh|ja|ojp|月|tr=tuku}}, derived through a fusion with an
 * {{see derivation subpage|Japanese pronunciation 1}}
 {{ja-number-counter:月(つき)}}
 
-=====Idiom=====
+=====Idioms=====
 * {{m|ja|月よ星よ|tr=tsuki yo hoshi yo}}
 * {{m|ja|月と鼈|tr=tsuki to suppon}}
 
@@ -313,7 +313,6 @@ From {{der|ko|ltc|sort=월|-}} {{ltc-l|月}}.
 |mh={{okm-l|ᄃᆞᆯ〮|tól}}
 |ml=天文#상01A
 }}
-
 ===Pronunciation===
 {{ko-hanja-pron|월}}
 
