--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -197,6 +197,8 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 * Spanish: {{t+|es|purgar}}
 * Swedish: {{t+|sv|lufta}}
 {{trans-bottom}}
+{{trans-top|tap off high-pressure gas }}
+{{trans-bottom}}
 
 ===Noun===
 {{en-noun}}
