--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -198,6 +198,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 * Swedish: {{t+|sv|lufta}}
 {{trans-bottom}}
 {{trans-top|tap off high-pressure gas }}
+* French: {{t+|fr|prélever}}
 {{trans-bottom}}
 
 ===Noun===
