--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -35,6 +35,9 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 # A [[superstructure]] on an [[aircraft carrier]]'s [[deck]].
 # A [[traffic island]].
 #: {{ux|en|the '''island''' in the middle of a roundabout}}
+# (by extension, West Midlands dialect) A [[roundabout]]; A [[traffic circle]].
+#: {{ux|en|Dunton '''island''', near Birmingham, is one of the most confusingly labelled '''islands''' in the U.K.}}
+#: {{ux|en|In Coventry, you will often hear people say: “Turn right at the '''island'''”.}}
 # {{lb|en|government}} An [[unincorporated]] area wholly surrounded by one or more incorporated areas.
 # {{lb|en|grammar}} A [[phrase]] from which a [[wh-word]] cannot be [[extract]]ed without yielding invalid grammar.
 #:''Adverbial subordinate clauses are '''island'''s for extraction: "They have a billion dollars of inventory that they don't know where *(it) is".''
