t+niv:[[ур̌]] ([[WT:EDIT|Assisted]]) <island#64737000>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -244,6 +244,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Nepali: {{t|ne|द्वीप|m}}, {{t|ne|टापू}}
 * Ngazidja Comorian: {{t|zdj|siwa|c5|c6}}
 * Niuean: {{t|niu|motu}}
+* Nivkh: {{t|niv|ур̌}}
 * Norman: {{t|nrf|île|f}}
 * North Frisian:
 *: Föhr-Amrum: {{t|frr|eilun|n}}
