t+fr:[[fond perdu]] ([[WT:EDIT|Assisted]]) <bleed#64751312>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -228,6 +228,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 
 {{trans-top|edge around layout}}
 * Dutch: {{t+|nl|afloop}}
+* French: {{t+|fr|fond perdu|m}}
 * German: {{t|de|Beschnitt}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|kifutó}}
