--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -46,7 +46,7 @@ The word is sometimes conjectured to come from an {{cog|xno|-}} derivative of {{
 * French: {{t+|fr|loir|m}}
 * Friulian: {{t|fur|glîr}}
 * Galician: {{t+|gl|leirón}}, {{t+|gl|lirio|m}}, {{t|gl|liranco|m}}
-* German: {{t+|de|Bilch|m}}, {{t+|de|Schläfer|m}}, {{t+|de|Schlafmaus|f}}, {{t+|de|Siebenschläfer|m}}
+* German: {{q|umbrella term}} {{t+|de|Bilch|m}}, {{t+|de|Bilchmaus|f}}, {{t+|de|Schläfer|m}}, {{t+|de|Schlafmaus|f}}, {{q|glis glis}} {{t+|de|Siebenschläfer}} {{q|garden dormouse}} {{t+|de|Gartenschläfer|m}}, {{q|hazel dormouse}} {{t+|de|Haselmaus|f}}
 *: Alemannic German: {{t|gsw|Haselmuus|f}}
 * Greek: {{t+|el|δασομυωξός|m}}
 * Hungarian: {{t+|hu|pele}}
