--- a/en/o/owre.720028.wikitext
+++ b/en/o/owre.720028.wikitext
@@ -23,7 +23,7 @@ From {{inh|en|enm|oure}}, from {{inh|en|ang|ūr}}, from {{inh|en|gmw-pro|*ūr}},
 ====Noun====
 {{en-noun}}
 
-# {{lb|en|obsolete}} The [[aurochs]].
+# {{lb|en|obsolete}} {{rfv-sense|en}} The [[aurochs]].
 #: {{rfquotek|en|Edmund Spenser}}
 
 =====Related terms=====
