--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -84,6 +84,28 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 
 ----
 
+==Alemannic German==
+
+
+===Pronunciation===
+* {{IPA|gsw|/meːɡ̊ɑ/|/meːɡ̊ə/}}
+
+===Adverb===
+{{head|gsw|adverb}}
+
+# {{lb|gsw|colloquial}} [[very]]
+#: {{ux|gsw|S Auto isch uu '''mega''' schnäll verbiigraast.|The car drove by '''very''' quickly.}}
+
+====Usage notes====
+* Sometimes preceded by the intensifier {{m|gsw|uu}}. The other order **"'''mega''' uu" is not grammatical.
+
+====Synonyms====
+* {{l|gsw|uu}}
+* {{l|gsw|seer}}
+* {{l|gsw|huere}} {{q|vulgar}}
+
+----
+
 ==Catalan==
 
 ===Noun===
