--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -88,7 +88,7 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 
 
 ===Pronunciation===
-* {{IPA|gsw|/meːɡ̊ɑ/|/meːɡ̊ə/}}
+* {{IPA|gsw|/meɡ̊ɑ/|/meɡ̊ə/|/meːɡ̊ɑ/}}
 
 ===Adverb===
 {{head|gsw|adverb}}
