--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -157,7 +157,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Danish: {{t+|da|blæse}}, {{t|da|puste}}
 * Dutch: {{t+|nl|blazen}}, {{t+|nl|waaien}}
 * Esperanto: {{t+|eo|blovi}}
-* Evenki: {{t|evn|эдын-}}, {{t|evn|хув-}}
+* Evenki: {{t|evn|эдынми}}, {{t|evn|хув-}}
 * Faroese: {{t+|fo|blása}}
 * Finnish: {{t+|fi|puhaltaa}}
 * French: {{t+|fr|souffler}}
