--- a/en/m/mongolism.720243.wikitext
+++ b/en/m/mongolism.720243.wikitext
@@ -1,13 +1,13 @@
 ==English==
 
 ===Etymology===
-{{suffix|en|Mongol|ism}}, coined by {{w|John Langdon Down}}.
+{{suf|en|Mongol|ism}}, coined by {{w|John Langdon Down}}.
 
 ===Noun===
-{{wikipedia|Down syndrome}}
+{{wp|Down syndrome}}
 {{en-noun|~}}
 
-# {{lb|en|now|_|offensive}} [[Down syndrome]]
+# {{lb|en|now|_|offensive}} [[Down syndrome]] / [[Down's syndrome]] ([[Down’s syndrome]])
 
 ====Translations====
 {{trans-top|Down syndrome}}
@@ -17,7 +17,7 @@
 *: Mandarin: {{t|cmn|蒙古症|tr=ménggǔzhèng|sc=Hani}}
 {{trans-mid}}
 * French: {{t+|fr|mongolisme|m}}
-* German: [[Mongolismus]] {{g|m}} {{qualifier|dated}}
+* German: {{t+|de|Mongolismus|m}} {{q|dated}}
 {{trans-bottom}}
 
 ===Related terms===
@@ -30,12 +30,12 @@
 ==Romanian==
 
 ===Etymology===
-From {{bor|ro|fr|mongolisme}}
+From {{bor|ro|fr|mongolisme}}.
 
 ===Noun===
 {{ro-noun|n|-}}
 
-# {{l|en|Mongolism}}
+# {{l|en|mongolism}}
 
 ====Declension====
 {{ro-noun-n|n=sg}}
