--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -1,5 +1,6 @@
 {{also|водка}}
 ==English==
+{{wp}}
 [[File:Wodkaflaschen.JPG|thumb|Various bottles of vodka]]
 
 ===Etymology===
@@ -34,8 +35,8 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 # {{lb|en|US|_|standard of identity}} [[neutral spirits#English|Neutral spirits]] distilled (or treated after distillation) so as to have no distinctive character, aroma, taste{{,}} or color.
 
 ====Derived terms====
-{{der4
-|en|vodka luge
+{{der4|en
+|vodka luge
 |vodka tonic
 |vodkaless
 |vodkatini
@@ -52,7 +53,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Albanian: {{t+|sq|vodkë|f}}
 * Arabic: {{t|ar|فُودْكَا|f|tr=vodkā}}, {{t|ar|فُودْكَا|f}}
 *: Hijazi Arabic: {{t|acw|ڤودكا|f|tr=vōdka}}
-* Armenian: {{t+|hy|օղի}}, {{qualifier|colloquial}} {{t+|hy|արաղ}}
+* Armenian: {{t+|hy|օղի}}, {{t+|hy|արաղ}} {{q|colloquial}}
 * Asturian: {{t|ast|vodca|m}}
 * Avar: {{t|av|гӏаракъи}}
 * Azerbaijani: {{t+|az|araq}}, {{t+|az|vodka}}
@@ -72,7 +73,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Danish: {{t|da|vodka|c}}
 * Dutch: {{t+|nl|wodka|m}}
 * Esperanto: {{t+|eo|vodko}}
-* Estonian: {{t+|et|viin}}, {{t+|et|vodka}} {{qualifier|uncommon}}
+* Estonian: {{t+|et|viin}}, {{t+|et|vodka}} {{q|uncommon}}
 * Finnish: {{t+|fi|votka}}, {{t+|fi|vodka}}
 * French: {{t+|fr|vodka|f}}
 * Galician: {{t|gl|vodka}}
@@ -117,7 +118,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Polish: {{t+|pl|wódka|f}}
 * Portuguese: {{t+|pt|vodca|f}}, {{t+|pt|vodka|f}}
 * Romanian: {{t+|ro|vodcă|f}}
-* Russian: {{t+|ru|во́дка|f}}, {{t+|ru|горе́лка|f}} {{qualifier|regional, Ukraine, South Russia}}
+* Russian: {{t+|ru|во́дка|f}}, {{t+|ru|горе́лка|f}} {{q|regional, Ukraine, South Russia}}
 * Rusyn: {{t|rue|пали́нка|f}}
 * Samogitian: {{t|sgs|arielka|f}}, {{t|sgs|degtėnė|f}}
 * Serbo-Croatian:
@@ -178,7 +179,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 ===Noun===
 {{kw-noun|f|vodkas}}
 
-# [[vodka]]
+# {{l|en|vodka}}
 
 ===References===
 * [https://www.cornishdictionary.org.uk/#vodka Cornish-English Dictionary] from Maga's Online Dictionary
@@ -190,14 +191,15 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 ----
 
 ==Danish==
+{{wp|lang=da}}
 
 ===Etymology===
-Borrowed from {{bor|da|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|da|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Noun===
 {{da-noun}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ====Declension====
 {{da-decl|en|er}}
@@ -205,12 +207,13 @@ Borrowed from {{bor|da|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ----
 
 ==Finnish==
+{{wp|lang=fi}}
 
 ===Alternative forms===
 * {{l|fi|votka}}
 
 ===Etymology===
-Borrowed from {{bor|fi|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|fi|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 {{fi-p}}
@@ -218,7 +221,7 @@ Borrowed from {{bor|fi|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ===Noun===
 {{fi-noun}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ====Declension====
 {{fi-decl-koira|vodk|||a}}
@@ -230,9 +233,10 @@ Borrowed from {{bor|fi|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ----
 
 ==French==
+{{wp|lang=fr}}
 
 ===Etymology===
-Borrowed from {{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
@@ -241,7 +245,7 @@ Borrowed from {{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ===Noun===
 {{fr-noun|f}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ===Further reading===
 * {{R:TLFi}}
@@ -251,9 +255,10 @@ Borrowed from {{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ----
 
 ==Hungarian==
+{{wp|lang=hu}}
 
 ===Etymology===
-Borrowed from {{bor|hu|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|hu|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 * {{hu-IPA}}
@@ -263,7 +268,7 @@ Borrowed from {{bor|hu|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ===Noun===
 {{hu-noun|pl=vodkák}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ====Declension====
 {{hu-infl-nom|vodká|o}}{{hu-pos-tok|vodká}}
@@ -276,10 +281,10 @@ Borrowed from {{bor|hu|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ----
 
 ==Icelandic==
-{{wikipedia|lang=is}}
+{{wp|lang=is}}
 
 ===Etymology===
-Borrowed from {{bor|is|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|is|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 * {{IPA|is|/ˈvɔt.kʰa/}}
@@ -287,7 +292,7 @@ Borrowed from {{bor|is|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ===Noun===
 {{is-noun|n|vodka|-}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ====Declension====
 {{is-decl-noun-n-w|v|o|dk|a|pl=-}}
@@ -297,10 +302,10 @@ Borrowed from {{bor|is|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ----
 
 ==Italian==
-{{wikipedia|lang=it}}
+{{wp|lang=it}}
 
 ===Etymology===
-Borrowed from {{bor|it|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|it|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 {{it-pr|vòdka}}
@@ -308,7 +313,7 @@ Borrowed from {{bor|it|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ===Noun===
 {{it-noun|f|#}}
 
-# [[vodka#English|vodka]]
+# {{l|en|vodka}}
 
 {{C|it|Alcoholic beverages}}
 
@@ -319,22 +324,22 @@ Borrowed from {{bor|it|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ==Norman==
 
 ===Etymology===
-Borrowed from {{bor|nrf|en|vodka}}, from {{bor|nrf|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|nrf|en|vodka}}, from {{bor|nrf|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Noun===
 {{nrf-noun|m}}
 
-# {{lb|nrf|Jersey}} [[#English|vodka]]
+# {{lb|nrf|Jersey}} {{l|en|vodka}}
 
 {{topics|nrf|Distilled beverages}}
 
 ----
 
 ==Norwegian Bokmål==
-{{wikipedia|lang=no}}
+{{wp|lang=nb}}
 
 ===Etymology===
-Borrowed from {{bor|nb|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|nb|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 * {{IPA|nb|/ʋɔdkɑ/}}
@@ -350,9 +355,10 @@ Borrowed from {{bor|nb|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ----
 
 ==Norwegian Nynorsk==
+{{wp|lang=nn}}
 
 ===Etymology===
-Borrowed from {{bor|nn|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|nn|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Noun===
 {{head|nn|noun|g=m|definite singular|vodkaen}}
@@ -364,9 +370,10 @@ Borrowed from {{bor|nn|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ----
 
 ==Portuguese==
+{{wp|lang=pt}}
 
 ===Etymology===
-Borrowed from {{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 {{pt-IPA|vódka}}
@@ -374,7 +381,7 @@ Borrowed from {{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ===Noun===
 {{pt-noun|f}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ----
 
@@ -390,7 +397,7 @@ From {{inh|sk|sla-pro|*vodъka}}, equivalent to {{af|sk|voda|t1=water|-ka|pos2=d
 ===Noun===
 {{sk-noun|g=f|gen=vodky|pl=vodky|genpl=vodiek|decl=žena}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ====Declension====
 {{sk-decl-noun|vodka|vodky|vodke|vodku|vodke|vodkou|vodky|vodiek|vodkám|vodky|vodkách|vodkami}}
@@ -406,9 +413,10 @@ From {{inh|sk|sla-pro|*vodъka}}, equivalent to {{af|sk|voda|t1=water|-ka|pos2=d
 ----
 
 ==Spanish==
+{{wp|lang=es}}
 
 ===Etymology===
-Borrowed from {{bor|es|ru|во́дка|lit=little water}}, a diminutive of {{m|ru|вода́|t=water}}.
+From {{bor|es|ru|во́дка|lit=little water}}, a diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
 {{es-IPA}}
@@ -416,7 +424,7 @@ Borrowed from {{bor|es|ru|во́дка|lit=little water}}, a diminutive of {{m|r
 ===Noun===
 {{es-noun|m}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ===Further reading===
 * {{R:DRAE}}
@@ -426,6 +434,7 @@ Borrowed from {{bor|es|ru|во́дка|lit=little water}}, a diminutive of {{m|r
 ----
 
 ==Swedish==
+{{wp|lang=sv}}
 
 ===Pronunciation===
 * {{IPA|sv|/vɔdka/}}
@@ -433,7 +442,7 @@ Borrowed from {{bor|es|ru|во́дка|lit=little water}}, a diminutive of {{m|r
 ===Noun===
 {{sv-noun|c}}
 
-# [[#English|vodka]]
+# {{l|en|vodka}}
 
 ====Declension====
 {{sv-infl-noun-c-or|vodk}}
