--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -1,4 +1,5 @@
 {{also|Leather}}
+
 ==English==
 {{wikipedia}}
 
@@ -176,6 +177,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 {{en-adj|-}}
 
 # [[made|Made]] of leather.
+#: {{syn|en|leathern}}
 #* {{RQ:Churchill Celebrity|chapter=2|passage=Sunning himself on the board steps, I saw for the first time Mr. Farquhar Fenelon Cooke.{{...}}A silver snaffle on a heavy '''leather''' watch guard which connected the pockets of his corduroy waistcoat, together with a huge gold stirrup in his Ascot tie, sufficiently proclaimed his tastes.}}
 # Referring to one who wears leather clothing (motorcycle jacket, chaps over 501 jeans, boots), especially as a sign of sadomasochistic homosexuality.
 
@@ -231,6 +233,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 {{der3|en
 |title=Terms derived from the adjective, noun, or verb ''leather''|hell-for-leather
 |leatherback
+|leathercraft
 |leatherette
 |leatherhead
 |leatherjacket<!--a type of fish-->
