--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -110,6 +110,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 {{trans-mid}}
 * Malayalam: {{t|ml|നീർനായ}}
 * Maltese: {{t|mt|lutra|?}}
+* Manchu: {{t|mnc|ᡥᠠᡳᠯᡠᠨ}}
 * Manx: {{t|gv|dooarchoo|m}}, {{t+|gv|moddey ushtey|m}}
 * Marathi: {{t|mr|पाणमांजर|?}}
 * Mi'kmaq: {{t|mic|giwnig|an}}
