===Etymology 2===  ====Adjective==== {{en-adj}}  # {{alt form|en|bhanged}}  =====References===== * '''1903''', Henry Yule, Arthur Burnell, ''Hobson-Jobson: A Glossary of Colloquial Anglo-Indian Words and Phrases'' <banged#64826771>

--- a/en/b/banged.720059.wikitext
+++ b/en/b/banged.720059.wikitext
@@ -1,14 +1,26 @@
 ==English==
 
-===Verb===
+===Etymology 1===
+
+====Verb====
 {{head|en|verb form}}
 
 # {{en-past of|bang}}
 
-===Adjective===
+====Adjective====
 {{en-adj|-}}
 
 # Having the hair styled in [[bangs]].
+
+===Etymology 2===
+
+====Adjective====
+{{en-adj}}
+
+# {{alt form|en|bhanged}}
+
+=====References=====
+* '''1903''', Henry Yule, Arthur Burnell, ''Hobson-Jobson: A Glossary of Colloquial Anglo-Indian Words and Phrases''
 
 ----
 
