--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -403,3 +403,4 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * {{R:Northeast Dialect 2005}}
 
 [[Category:English frequentative verbs]]
+[[Category:en:Prison]]
