--- a/en/g/guilloche.855171.wikitext
+++ b/en/g/guilloche.855171.wikitext
@@ -17,6 +17,9 @@ From {{etyl|fr|en}} {{m|fr|guilloche}}.
 #*: A railroad right-of-way, straight across the Balkan Peninsula, conceded in Cyrillic and Arabic script all woven in and out of the loveliest green '''guilloche''' by the no-longer-quite-unabsorbed entity of East Roumelia.
 # The [[tool]] used to create such work.
 
+====Translations====
+
+
 ===Verb===
 {{en-verb}}
 
