--- a/en/g/guilloche.855171.wikitext
+++ b/en/g/guilloche.855171.wikitext
@@ -20,6 +20,7 @@ From {{etyl|fr|en}} {{m|fr|guilloche}}.
 ====Translations====
 {{trans-top|pattern}}
 {{trans-mid}}
+* French: {{t+|fr|guilloche|f}}
 * German: {{t+|de|Guilloche|f}}
 {{trans-bottom}}
 
