/* Noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <souple#64840891>

--- a/en/s/souple.856101.wikitext
+++ b/en/s/souple.856101.wikitext
@@ -16,10 +16,10 @@ From a UK dialect form of {{m|en|supple}}.
 ====Noun====
 {{en-noun}}
 
-# The part of a [[flail]] that [[strike]]s the [[grain]].
-#: {{rfquotek|en|Knight}}
+# The part of a [[flail]] that [[strike]]s the [[grain]]<ref>{{R:Knight AMD}}</ref>.
 
-{{Webster 1913}}
+===References===
+<references/>
 
 ===Anagrams===
 * {{anagrams|en|a=elopsu|Loupes|Peluso|Puleos|loupes|poules}}
