--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -46,7 +46,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 # {{lb|en|engineering}} An [[arbor]], as of a wheel or a pinion of a watch.
 # {{lb|en|surgery}} The grooved director for the gorget, or knife, used in cutting for stone in the bladder.
 # {{lb|en|military}} An establishment of officers in various departments attached to an army, to a section of an army, or to the commander of an army. The general's staff consists of those officers about his person who are employed in carrying his commands into execution.
-#* {{RQ:Dickens Barnaby Rudge|III|49|217|At the head of that division which had Westminster Bridge for its approach to the scene of action, Lord George Gordon took his post; with Gashford at his right hand, and sundry ruffians, of most unpromising appearance, forming a kind of '''staff''' about him.}}
+#* {{RQ:Dickens Barnaby Rudge|volume=III|49|217|At the head of that division which had Westminster Bridge for its approach to the scene of action, Lord George Gordon took his post; with Gashford at his right hand, and sundry ruffians, of most unpromising appearance, forming a kind of '''staff''' about him.}}
 
 =====Synonyms=====
 * {{sense|piece of wood}} See [[Thesaurus:stick]]
