/* Noun */ sure (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <bound#64865297>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -270,11 +270,10 @@ From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|b
 {{en-noun}}
 
 # A sizeable [[jump]], great leap.
-#: ''The deer crossed the stream in a single '''bound'''.''
+#: {{ux|en|The deer crossed the stream in a single '''bound'''.}}
 # A [[spring]] from one [[foot]] to the other in [[dancing]].
 # {{lb|en|dated}} A [[bounce]]; a [[rebound]].
-#: ''the '''bound''' of a ball''
-#: {{rfquotek|en|Johnson}}
+#*{{RQ:Florio Worlde of Wordes|passage=Balzo, a '''bound''' of a ball}}
 
 =====Derived terms=====
 * {{l|en|by leaps and bounds}}
