--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -273,7 +273,7 @@ From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|b
 #: {{ux|en|The deer crossed the stream in a single '''bound'''.}}
 # A [[spring]] from one [[foot]] to the other in [[dancing]].
 # {{lb|en|dated}} A [[bounce]]; a [[rebound]].
-#*{{RQ:Florio Worlde of Wordes|passage=Balzo, a '''bound''' of a ball}}
+#*{{RQ:Florio Worlde of Wordes|Balzo|passage=Balzo, a '''bound''' of a ball}}
 
 =====Derived terms=====
 * {{l|en|by leaps and bounds}}
