/* Derivatives */ to Derived Terms <whistler#64867252>

--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -26,7 +26,7 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 ====Synonyms====
 * {{sense|whistling marmot}} {{l|en|hoary marmot}}
 
-====Derivatives====
+====Derived Terms====
 {{der4|en|title=Species of whistler, family [[Pachycephalidae]]
 |Baliem whistler
 |bare-throated whistler
