--- a/en/b/bunny hop.855593.wikitext
+++ b/en/b/bunny hop.855593.wikitext
@@ -20,7 +20,7 @@
 ===Verb===
 {{en-verb|++}}
 
-# {{lb|en|video games}} to [[jump]] repeatedly while making [[contact]] with [[ground]] for as short as possible, often combined with [[air strafing]], especially in [[first-person shooter]]s
+# {{lb|en|video games}} to [[jump]] repeatedly while making [[contact]] with [[ground]] for as little time as possible, often combined with [[air strafing]], especially in [[first-person shooter]]s.
 
 [[Category:en:Dances]]
 [[Category:en:Exercise]]
