/* Verb */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <bunny hop#64869842>

--- a/en/b/bunny hop.855593.wikitext
+++ b/en/b/bunny hop.855593.wikitext
@@ -21,6 +21,7 @@
 {{en-verb|++}}
 
 # {{lb|en|video games}} to [[jump]] repeatedly while making [[contact]] with [[ground]] for as little time as possible, often combined with [[air strafing]], especially in [[first-person shooter]]s.
+# {{lb|en|cylcing}} {{alt form|en|bunny-hop}}
 
 [[Category:en:Dances]]
 [[Category:en:Exercise]]
