t+tsg:[[huyup]] t-balance ([[WT:EDIT|Assisted]]) <blow#64888873>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -184,10 +184,10 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Lao: {{t|lo|ພັດ}}
 * Latgalian: {{t|ltg|pyust}}
 * Latin: {{t|la|flo}}, {{t|la|sufflo}}
-{{trans-mid}}
 * Latvian: {{t+|lv|pūst}}
 * Lithuanian: {{t+|lt|pūsti}}
 * Macedonian: {{t|mk|дува|impf}}
+{{trans-mid}}
 * Malay: {{t+|ms|tiup}}, {{t|ms|hembus}}
 * Mansaka: {{t|msk|oyop}}
 * Manchu: {{t|mnc|ᡶᡠᠯᡤᡳᠶᡝᠮᠪᡳ}}
@@ -222,6 +222,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Swahili: {{t|sw|puliza|alt=-puliza}}
 * Swedish: {{t+|sv|blåsa}}
 * Tagalog: {{t|tl|ihip}}, {{t|tl|ihipan}}
+* Tausug: {{t|tsg|huyup}}
 * Tetum: {{t|tet|huu}}
 * Thai: {{t+|th|พัด}}
 * Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
