--- a/en/m/mind-body.720290.wikitext
+++ b/en/m/mind-body.720290.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternative forms===
-* {{l|en|mind–body}}
+* {{l|en|mind-body}}
 
 ===Adjective===
 {{en-adj|-|head=[[mind]]-[[body]]}}
