--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -4,10 +4,9 @@
 From {{prefix|en|anarcho|capitalism}}. {{coin|en|occ=economist|nat=American|Murray Rothbard|nocat=1}} in the mid-20th century.
 
 ===Noun===
-{{wikipedia}}
-{{wikiquote}}
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
-# {{lb|en|politics|economics}} A {{l|en|political}} and {{l|en|economic}} {{l|en|philosophy}} that advocates the {{l|en|elimination}} of the {{l|en|state}} and other {{l|en|coercive}} {{l|en|institutions}} in favour of {{l|en|individual}} {{l|en|self}}-{{l|en|ownership}} and {{l|en|free market}}.
+
+# {{lb|en|politics|economics}} A [[political]] and [[economic]] [[philosophy]] that advocates the [[elimination]] of the state and other [[coercive]] institutions in favour of individual self-ownership}} and [[free market]].
 
 ====Derived terms====
 * {{l|en|anarcho-capitalist}}
@@ -70,6 +69,10 @@ From {{prefix|en|anarcho|capitalism}}. {{coin|en|occ=economist|nat=American|Murr
 * {{l|en|libertarianism}}
 * {{l|en|Rothbardian}}
 * {{l|en|voluntaryism}}
+
+===Further reading===
+* {{pedia}}
+* {{projectlink|quote}}
 
 [[Category:en:Anarchism]]
 [[Category:en:Capitalism]]
