--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -6,7 +6,7 @@ From {{prefix|en|anarcho|capitalism}}. {{coin|en|occ=economist|nat=American|Murr
 ===Noun===
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
 
-# {{lb|en|politics|economics}} A [[political]] and [[economic]] [[philosophy]] that advocates the [[elimination]] of the state and other [[coercive]] institutions in favour of individual self-ownership}} and [[free market]].
+# {{lb|en|politics|economics}} A [[political]] and [[economic]] [[philosophy]] that advocates the [[elimination]] of the state and other [[coercive]] institutions in favour of individual self-ownership and [[free market]].
 
 ====Derived terms====
 * {{l|en|anarcho-capitalist}}
