/* Noun */ <anarcho-capitalism#64890005>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -7,6 +7,7 @@ From {{prefix|en|anarcho|capitalism}}. {{coin|en|occ=economist|nat=American|Murr
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
 
 # {{lb|en|politics|economics}} A [[political]] and [[economic]] [[philosophy]] that advocates the [[elimination]] of the state and other [[coercive]] institutions in favour of individual self-ownership and [[free market]].
+#* {{quote-book|en|author=John Gray|authorlink=John Gray (philosopher)|title={{w|False Dawn: The Delusions of Global Capitalism}}|year=1998|publisher=The New Press|location=New York|page=133|pageurl=https://archive.org/details/falsedawndelusio00gray/page/133/mode/1up|isbn=978-1-56584-592-3|passage=The second was shock therapy. Implemented briefly in the aftermath of the Soviet collapse, shock therapy aimed to construct a free market in post-communist Russia. It produced instead a species of mafia-dominated '''anarcho-capitalism'''.}}
 
 ====Derived terms====
 * {{l|en|anarcho-capitalist}}
