--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -30,7 +30,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 # {{lb|en|figurative|derogatory}} An institution awarding educational certificates not officially recognised
 # {{lb|en|informal}} An [[engine]].<!--{{R:ODO}}-->
 # {{lb|en|informal}} A boxing match, [[fistfight]].<!--{{R:ODO}}-->
-#* {{quote-book|en|year=1914|year_published='''2009'''|edition=HTML| author={{w|Edgar Rice Burrougha}}| title=The Mucker| url=http://www.gutenberg.org/files/331/331-h/331-h.htm| publisher=The Gutenberg Project| passage=The name of the "white hope" against whom Billy was to go was sufficient to draw a fair house, and there were some there who had seen Billy in other fights and looked for a good '''mill'''.}}
+#* {{RQ:Burroughs Mucker|passage=The name of the "white hope" against whom Billy was to go was sufficient to draw a fair house, and there were some there who had seen Billy in other fights and looked for a good '''mill'''.}}
 # {{lb|en|die sinking}} A hardened steel [[roller]] with a design in relief, used for imprinting a reversed copy of the design in a softer metal, such as copper.
 # {{lb|en|mining}} An excavation in rock, transverse to the workings, from which material for filling is obtained.
 # {{lb|en|mining}} A passage underground through which ore is shot.
