--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -459,7 +459,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Armenian: {{tt+|hy|խոզ}}
 * Bulgarian: {{t+|bg|свиня|f}}
 * Czech: {{tt+|cs|prase|n}}
-* Danish: {{tt+|da|svín|n}}
+* Danish: {{tt+|da|svin|n}}
 * Dutch: {{tt+|nl|zwijn|n}}, {{tt+|nl|smeerlap|m}}
 * Finnish: {{tt+|fi|sika}}
 * French: {{tt+|fr|salaud|m}}, {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}, {{tt+|fr|pourceau|m}}
