--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -38,6 +38,7 @@
 * Finnish: {{t+|fi|kroisos}}
 * French: {{t+|fr|richard|m}}
 * Hungarian: {{t|hu|pénzeszsák}}
+* Portuguese: {{+|pt|ricaço|m}}, {{t+|pt|ricaça|f}} 
 {{trans-bottom}}
 
 {{checktrans-top}}
