t+pl:[[alogamia]] t+pl:[[obcopylność]] ([[WT:EDIT|Assisted]]) <allogamy#64916435>

--- a/en/a/allogamy.775548.wikitext
+++ b/en/a/allogamy.775548.wikitext
@@ -20,6 +20,7 @@
 * Greek: {{t+|el|αλλογαμία|f}}
 {{trans-mid}}
 * Italian: {{t|it|allogamia|f}}
+* Polish: {{t+|pl|alogamia|f}}, {{t|pl|obcopylność|f}}
 * Portuguese: {{t|pt|alogamia|f}}
 * Spanish: {{t|es|alogamia|f}}
 {{trans-bottom}}
