/* Derived terms */ <leather#64919942>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -240,6 +240,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 |leather jacket<!--a jacket made of leather-->
 |leather-lunged
 |leathern
+|leatherwork
 |leathery
 |slap leather
 |stirrup leather <!-- the strap which hangs the stirrup from the saddle -->
