/* Phrase */ Added a early use <DWB#64923274>

--- a/en/d/DWB.741869.wikitext
+++ b/en/d/DWB.741869.wikitext
@@ -8,6 +8,7 @@ A play on "DWI" ("driving while intoxicated").
 {{en-phrase}}
 
 # {{initialism of|en|[[driving]] while [[black]] (or [[brown]])|nodot=1}}: a [[sarcastic]] reference to [[racial profiling]] by police investigating driving offences.
+#* {{quote-book|en|title=Multiracial Couples: Black and White Voices|passage={{smallcaps|jill}} We [Jill and her husband James] call it, "Driving While Black." We have a . . . nice car. So we got pulled over for a '''DWB'''. . . .|year=1995|author=Paul C. Rosenblatt; Terri A. Karis; Richard D. Powell|page=147|isbn=0803972598|pageurl=https://archive.org/details/multiracialcoupl0000rose/page/147|series=Understanding Families|publisher=SAGE Publications|url=https://archive.org/details/multiracialcoupl0000rose}}
 
 ====Related terms====
 * {{l|en|DWI}} {{gloss|driving while intoxicated}}
