/* Noun */ quote <whistle#64928258>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -15,6 +15,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{en-noun|~}}
 
 # {{senseid|en|device}} A device designed to be placed in the mouth and blown, or driven by steam or some other mechanism, to make a whistling sound.
+#* {{quote-journal|en|year=1960|month=October|author=P. Ransome-Wallis|title=Modern motive power of the German Federal Railway: Part Two|journal=Trains Illustrated|page=611|text=A lovely crisp exhaust: a feeling of almost unlimited power combined with complete freedom of running: and, to crown it all, a most melodious and wholly American chime '''whistle'''&mdash;these were my immediate impressions as we stormed rapidly out of Göttingen, intent on winning back some of the lost time.}}
 #* {{quote-journal|en|year=1961|month=March|author=""Balmore""|title=Driving and firing modern French steam locomotives| journal=Trains Illustrated| page=151| text=One thing I took great care to observe was obedience to the "'''whistle'''" boards which crop up with great frequency, for failure to sound the '''whistle''', if observed by the ''gendarmerie'', can bring about serious consequences.}}
 #* {{quote-book|en|year=2012|author=Andrew Martin| title=Underground Overground: A passenger's history of the Tube| publisher=Profile Books, {{ISBN|978-1846684777}}| pages=61-62| text=[...] and Temple station, which had to have a very modestly proportioned station building on the insistence of the Duke of Norfolk who owned the land on which it was built, and where the trains under the glass roof of the station were not allowed to blow their '''whistles''', at the insistence of the barristers in the nearby Inns of Court.}}
 # An act of whistling.
