--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -54,13 +54,13 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Asturian: {{t|ast|xiblatu|m}}
 * Azerbaijani: {{t+|az|fit}}
 * Bashkir: {{t|ba|һыҙғыртҡыс}}
-* Belarusian: {{t|be|свісто́к|m|sc=Cyrl}}
+* Belarusian: {{t|be|свісто́к|m}}
 * Breton: {{t+|br|c'hwitell|f}}, {{t+|br|c'hwitelloù|p}}
-* Bulgarian: {{t+|bg|свирка|f|sc=Cyrl}}
+* Bulgarian: {{t+|bg|сви́рка|f}}
 * Catalan: {{t+|ca|xiulet|m}}
 * Chinese:
-*: Cantonese: {{t|yue|哨子|tr=saau3 zi2|sc=Hani}}, {{t+|yue|雞|tr=gai1|sc=Hani}}
-*: Mandarin: {{t+|cmn|哨子|tr=shàozi|sc=Hani}}, {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t+|cmn|口笛|tr=kǒudí|sc=Hani}}, {{t+|cmn|汽笛|tr=qìdí|sc=Hani}} {{qualifier|steam whistle}}
+*: Cantonese: {{t|yue|哨子|tr=saau3 zi2}}, {{t+|yue|雞}}, {{t+|yue|鸡|tr=gai1}}
+*: Mandarin: {{t+|cmn|哨子|tr=shàozi}}, {{t+|cmn|口哨|tr=kǒushào}}, {{t+|cmn|口笛|tr=kǒudí}}, {{t+|cmn|汽笛|tr=qìdí}} {{qualifier|steam whistle}}
 * Czech: {{t+|cs|píšťala|f}}, {{t|cs|píšťalka|f}}
 * Danish: {{t+|da|fløjte|c}}
 * Dutch: {{t+|nl|fluitje|n}}
@@ -81,14 +81,14 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Irish: {{t+|ga|feadóg|f}}
 * Italian: {{t+|it|fischietto|m}}
 * Japanese: {{t+|ja|笛|tr=ふえ, fue}}, {{t+|ja|ホイッスル|tr=hoissuru}}, {{t|ja|口笛|tr=くちぶえ, kuchibue}}, {{t|ja|汽笛|tr=きてき, kiteki|sc=Jpan}} {{qualifier|steam whistle}},, {{t|ja|呼び子|tr=よびこ, yobiko}}
-* Khmer: {{t+|km|កញ្ចែ|tr=kanh jeh|sc=Khmr}}
+* Khmer: {{t+|km|កញ្ចែ}}
 {{trans-mid}}
-* Korean: {{t+|ko|호각}}, {{t+|ko|호루라기}}
+* Korean: {{t+|ko|호각(號角)}}, {{t+|ko|호루라기}}
 * Latgalian: {{t|ltg|šviļpuks}}, {{t|ltg|šviļpaunīks}}, {{t|ltg|sveļpe}}
 * Latvian: {{t|lv|svilpe|f}}, {{t|lv|svilpe|f}}
 * Lithuanian: {{t|lt|švilpukas|m}}
 * Luxembourgish: {{t+|lb|Päif|f}}
-* Macedonian: {{t|mk|свирка|f|sc=Cyrl}}
+* Macedonian: {{t|mk|свирка|f}}
 * Malay: {{t|ms|wisel}}
 * Maltese: {{t|mt|suffara|f}}
 * Maori: {{t|mi|wīhara}}, {{t|mi|wītara}}
@@ -103,7 +103,9 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Romanian: {{t+|ro|fluier|n}}
 * Russian: {{t+|ru|свисто́к|m}}
 * Scottish Gaelic: {{t|gd|feadag|f}}, {{t|gd|feadan|m}}
-* Serbo-Croatian: {{t+|sh|pištaljka|f}}, {{t+|sh|zviždaljka|f}}, {{t|sh|zviždalica|f}}, {{t+|sh|pištalica|f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|пѝшта̄љка|f}}, {{t|sh|звѝжда̄љка|f}}, {{t|sh|звиждалица|f}}, {{t|sh|пѝшталица|f}}
+*: Roman: {{t+|sh|pìštāljka|f}}, {{t+|sh|zvìždāljka|f}}, {{t|sh|zviždalica|f}}, {{t+|sh|pìštalica|f}}
 * Slovak: {{t|sk|píšťala|f}}
 * Slovene: {{t|sl|piščalka|f}}
 * Spanish: {{t+|es|silbato|m}}, {{t+|es|pito|m}}, {{t+|es|chifle|m}}
@@ -114,7 +116,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Tamil: {{t-needed|ta}}
 * Thai: {{t+|th|นกหวีด}}
 * Turkish: {{t+|tr|düdük}}
-* Ukrainian: {{t|uk|свист|m|sc=Cyrl}}, {{t|uk|свисто́к|m|sc=Cyrl}}, {{t|uk|сюрчо́к|m|sc=Cyrl}}
+* Ukrainian: {{t|uk|свист|m}}, {{t|uk|свисто́к|m}}, {{t|uk|сюрчо́к|m}}
 * Urdu: {{t|ur|سیٹی|f|tr=sīṭī}}
 * Vietnamese: {{t+|vi|còi}}, {{t|vi|tiếng hót}}, {{t|vi|tiếng huýt}}
 * Yiddish: {{t|yi|פֿײַפֿל|n|sc=Hebr}}
@@ -125,7 +127,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Belarusian: {{t|be|свіст|m}}
 * Catalan: {{t+|ca|xiulo|m}}
 * Chinese:
-*: Mandarin: {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t+|cmn|口笛|tr=kǒudí|sc=Hani}}
+*: Mandarin: {{t+|cmn|口哨|tr=kǒushào}}, {{t+|cmn|口笛|tr=kǒudí}}
 * Esperanto: {{t|eo|fajfado}}
 * Estonian: {{t-needed|et}}
 * Finnish: {{t+|fi|vihellys}}, {{t|fi|viheltäminen}}
@@ -134,8 +136,8 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Georgian: {{t|ka|სტვენა}}, {{t|ka|დასტვენა}}, {{t|ka|ჩასტვენა}}
 * German: {{t+|de|Pfeifen|n}}
 * Greek: {{t+|el|σφύριγμα|n}}
-* Hebrew: {{t+|he|שריקה|f|tr=sh'riká}}
-* Hindi: {{t+|hi|सीटी|f|sc=Deva}}
+* Hebrew: {{t+|he|שְׁרִיקָה|f|tr=sh'riká}}
+* Hindi: {{t+|hi|सीटी|f}}
 * Interlingua: {{t|ia|sibilo}}
 * Irish: {{t|ga|feadaíl|f}}
 * Japanese: {{t|ja|口笛|tr=くちぶえ, kuchibue}}
@@ -149,13 +151,14 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Romanian: {{t|ro|fluierare|f}}, {{t+|ro|fluierat|n}}, {{t|ro|fluierătură|f}}
 * Russian: {{t+|ru|свист|m}}, {{t+|ru|свисто́к|m}}
 * Serbo-Croatian:
-*: Roman: {{t+|sh|zvižduk|m}}
+*: Cyrillic: {{t|sh|зви̏ждӯк|m}}
+*: Roman: {{t+|sh|zvȉždūk|m}}
 * Swedish: {{t+|sv|vissling|c}}
 * Talysh:
-*: Asalemi: {{t|tly|فوزه|tr=fuza|sc=fa-Arab}}
-* Tamil: {{t+|ta|ஈசல்|sc=Taml}}
+*: Asalemi: {{t|tly|فوزه|tr=fuza}}
+* Tamil: {{t+|ta|ஈசல்}}
 * Thai: {{t+|th|การผิวปาก}}
-* Ukrainian: {{t|uk|свист|m|sc=Cyrl}}
+* Ukrainian: {{t|uk|свист|m}}
 {{trans-bottom}}
 
 {{trans-top|sound made by whistling}}
@@ -163,7 +166,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Breton: {{t+|br|c'hwitelladenn|f}}, {{t+|br|c'hwitelladennoù|p}}
 * Catalan: {{t+|ca|xiulada|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}
+*: Mandarin: {{t+|cmn|口哨|tr=kǒushào}}
 * Danish: {{t|da|fløjt|n}}
 * Dutch: {{t+|nl|fluittoon|m}}
 * Esperanto: {{t|eo|fajfo}}
@@ -174,12 +177,12 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Georgian: {{t|ka|სტვენა}}
 * German: {{t+|de|Pfeifen|n}}, {{t+|de|Pfiff|m}}
 * Greek: {{t+|el|σφύριγμα|n}}, {{t|el|σφυριξιά|f}}
-* Hindi: {{t+|hi|सीटी|f|sc=Deva}}
+* Hindi: {{t+|hi|सीटी|f}}
 * Hungarian: {{t|hu|füttyszó}}
 * Indonesian: {{t+|id|siulan}}
 * Italian: {{t+|it|fischio|m}}
 {{trans-mid}}
-* Japanese: {{t|ja|口笛|tr=[[くちぶえ]], kuchibue}}
+* Japanese: {{t|ja|口笛|tr=くちぶえ, kuchibue}}
 * Korean: {{t+|ko|휘파람}}
 * Latvian: {{t|lv|svilpiens|m}}
 * Lithuanian: {{t|lt|švilpimas|m}}
@@ -189,12 +192,14 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Romanian: {{t+|ro|fluierat|n}}
 * Russian: {{t+|ru|свист|m}}, {{t+|ru|свисто́к|m}}
 * Scottish Gaelic: {{t|gd|fead|f}}
-* Serbo-Croatian: {{t+|sh|zvižduk|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|зви̏ждӯк|m}}
+*: Roman: {{t+|sh|zvȉždūk|m}}
 * Slovak: {{t+|sk|hvizd|m}}
 * Spanish: {{t+|es|silbato|m}}, {{t+|es|pitido|m}}, {{t+|es|chiflido|m}}, {{t+|es|pitada|f}}, {{t+|es|chifla|f}}, {{t+|es|chifle|m}}, {{t+|es|rechifla|f}}
 * Swedish: {{t+|sv|vissling|c}}
 * Thai: {{t|th|เสียงผิวปาก}}
-* Ukrainian: {{t|uk|свисто|m|alt=свист|sc=Cyrl}}, {{t|uk|свисто́к|m|sc=Cyrl}}, {{t|uk|сюрчо́к|m|sc=Cyrl}}
+* Ukrainian: {{t|uk|свист|m}}, {{t|uk|свисто́к|m}}, {{t|uk|сюрчо́к|m}}
 * Urdu: {{t|ur|سیٹی|f|tr=sīṭī}}
 * Venetian: {{t+|vec|fis-cio|m}}
 {{trans-bottom}}
@@ -214,7 +219,9 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Portuguese: {{t+|pt|apito|m}}, {{t+|pt|assobio|m}}
 * Russian: {{t+|ru|свист|m}}
 * Scottish Gaelic: {{t|gd|fead|f}}
-* Serbo-Croatian: {{t+|sh|zvižduk|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|зви̏ждӯк|m}}
+*: Roman: {{t+|sh|zvȉždūk|m}}
 * Spanish: {{t+|es|silbato|m}}, {{t+|es|pito|m}}, {{t+|es|pitido}}
 * Swedish: {{t+|sv|vissling|c}}
 * Turkish: {{t+|tr|ıslık}}
