--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -97,7 +97,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Norwegian:
 *: Bokmål: {{t+|nb|fløyte|m|f}}
 *: Nynorsk: {{t|nn|fløyte|f}}
-* Persian: {{t+|fa|سوت}}
+* Persian: {{t+|fa|سوت|tr=sut}}
 * Polish: {{t+|pl|gwizdek|m}}, {{t+|pl|piszczałka|f}}
 * Portuguese: {{t+|pt|apito|m}}
 * Romanian: {{t+|ro|fluier|n}}
