--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -3,6 +3,9 @@
 {{wp}}
 [[File:Wodkaflaschen.JPG|thumb|Various bottles of vodka]]
 
+===Alternative forms===
+* {{alter|en|vodki|vodky}}
+
 ===Etymology===
 {{root|en|ine-pro|*wed-}}
 Borrowed from {{bor|en|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}. Historical documentary research of V. Pokhlyobkin suggests the derivation via the usage "dilution (of [[distil]]late) with water", as used in expressions "vodka of grain wine" and similar; {{m|ru|хле́бное вино́||grain wine}} is an archaic Russian name for vodka.
