Spanish: Adjusted forms <mega#64941920>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -403,7 +403,7 @@ From {{der|pt|grc|μέγας||great, large, mighty}}
 ===Etymology 2===
 
 ====Adjective====
-{{head|es|adjective form}}
+{{head|es|adjective form|g=f}}
 
 # {{adj form of|es|mego||f|s}}
 
