--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -3,6 +3,7 @@
 {{wikipedia}}
 
 ===Etymology 1===
+{{root|en|ine-pro|*stebʰ-}}
 From {{inh|en|enm|staf}}, from {{inh|en|ang|stæf}}, from {{inh|en|gmw-pro|*stab}}, from {{inh|en|gem-pro|*stabaz}}. Cognate with {{cog|nl|staf}}, {{cog|de|Stab}}, {{cog|sv|stav}}.
 
 Sense of "group of military officers that assists a commander" and similar meanings, attested from 1702, is influenced from German {{m|de|Stab}}.
