--- a/en/v/vexer.775491.wikitext
+++ b/en/v/vexer.775491.wikitext
@@ -69,5 +69,5 @@ Borrowed from {{etyl|la|fro}} {{m|la|vēxāre}}, present active infinitive of {{
 {{fro-conj-er}}
 
 ====Descendants====
-* {{desc|en|vex}} {{qualifier|borrowed into Middle English}}
+* {{desctree|enm|vexen|bor=1}}
 * {{desc|fr|vexer}}
