--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -448,7 +448,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 # {{lb|en|transitive}} To [[isolate]].
 #* '''1896''', {{w|A. E. Housman}}, {{w|A Shropshire Lad}}, XXVII, lines 1-2
 #*: ''High the vanes of {{w|Shrewsbury}} gleam''
-#*: '''Islanded''' in Severn stream.
+#*: '''Islanded''' in Severn stream.([[Thiyyar]])
 
 ====Synonyms====
 * {{l|en|isle}}
