--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -1,5 +1,4 @@
-{{also|Island|Ísland|Īsland|Island'}}[[Thiyyar]]
-
+{{also|Island|Ísland|Īsland|Island'}}
 ==English==
 {{wikipedia|lang=en}}
 [[Image:Island_near_Fiji.jpg|thumb|right|An island.]]
