--- a/en/i/indecorous.741298.wikitext
+++ b/en/i/indecorous.741298.wikitext
@@ -8,6 +8,8 @@
 {{en-adj}}
 
 # [[improper]], [[immodest]] or [[indecent]]
+#* '''2021''', Gabe Roth, quoted in: Tony Mauro, ''[https://www.law.com/nationallawjournal/2021/12/15/the-marble-palace-blog-seven-years-of-trying-to-fix-the-supreme-court/ The Marble Palace Blog: Seven Years of Trying to Fix the Supreme Court]'', in: The National Law Journal, December 15 2021
+#*: Fact is that papers being locked away for 50-plus years is '''indecorous.'''
 
 ====Antonyms====
 * {{l|en|decorous}}
