--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -20,10 +20,8 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 # {{lb|en|slang|British}} A person of the [[upper class]].
 # {{lb|en|boxing|uncountable}} The [[ability]] to [[withstand]] being [[punch]]ed in the [[#chin|chin]] without being [[knock out|knocked out]].
 # {{lb|en|aviation}} The lower part of the front of an aircraft, below the [[nose]].
-#* '''1990''', ''Army'' (volume 40)
-#*: In the cleft of the aircraft's '''chin''' is a small turret for a forward-looking infrared (FLIR) "eyeball" that will enable MH-47E pilots to see clearly in complete darkness {{...}}
-#* '''2001''', ''Aviation Week & Space Technology''
-#*: Lockheed Martin's system is mounted behind a transparent, low-observable window blended into the aircraft's '''chin'''.
+#* {{quote-journal|en|1990|||Army|volume=40|passage=In the cleft of the aircraft's '''chin''' is a small turret for a forward-looking infrared (FLIR) "eyeball" that will enable MH-47E pilots to see clearly in complete darkness {{...}}}}
+#* {{quote-journal|en|2001|||Aviation Week & Space Technology|passage=Lockheed Martin's system is mounted behind a transparent, low-observable window blended into the aircraft's '''chin'''.}}
 # The bottom part of a [[mobile phone]], below the [[screen]].
 
 =====Synonyms=====
