--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -7,8 +7,7 @@
 {{head|en|adjective}}
 
 # {{lb|en|idiomatic}} Thinking [[clearly]], [[sensibly]], and [[reasonably]].
-#* {{RQ:Charlotte Bronte Shirley|chapter=1|passage=“Is Mike Hartley '''in his right mind''', do you think, sir?” inquired Sweeting simply.
-#*: “Can't tell, Davy. He may be crazed, or he may be only crafty.”}}
+#* {{RQ:Charlotte Bronte Shirley|chapter=1|passage=“Is Mike Hartley '''in his right mind''', do you think, sir?” inquired Sweeting simply.<br>“Can't tell, Davy. He may be crazed, or he may be only crafty.”}}
 #* '''1873''', [[w:Mark Twain|Mark Twain]], ''The Gilded Age'', ch. 56:
 #*: If you find she was not '''in her right mind''', that she was the victim of insanity, hereditary or momentary, as it has been explained, your verdict will take that into account.
 #* '''1905''', [[w:H. G. Wells|H. G. Wells]], "[[w:Empire of the Ants|The Empire of the Ants]]":
