--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -273,8 +273,7 @@ From {{der|nn|la|minimum}}
 From {{bor|pl|la|minimum}}.
 
 ===Pronunciation===
-* {{pl-IPA|'mi.ni.mum}}
-* {{audio|pl|LL-Q809 (pol)-Olaf-minimum.wav|Audio}}
+{{pl-p|'mi.ni.mum|minimum|q2=colloquial|a=LL-Q809 (pol)-Olaf-minimum.wav|r=nimum|h=mi.ni.mum}}
 
 ===Adverb===
 {{pl-adv|-}}
@@ -296,6 +295,7 @@ From {{bor|pl|la|minimum}}.
 * {{R:PWN}}
 
 ----
+
 
 ==Romanian==
 
