--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -194,7 +194,7 @@ From {{bor|en|ro|Transnistria}}, from {{der|en|la|trans}} + {{der|en|ro|Nistru|t
 ===Proper noun===
 {{head|ro|proper noun|g=f}}
 
-# [[#English|Transnistria]]
+# {{place|ro|breakaway country|c/Moldova|t1=Transnistria}}
 
 ====Declension====
 {{ro-country|gend=f|Transnistriei}}
