--- a/en/m/madarosis.801854.wikitext
+++ b/en/m/madarosis.801854.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun|-}}
 
-# {{lb|en|medicine}} The loss of [[eyebrow]]s or [[eyelash]]es.
+# {{lb|en|medicine|dermatology}} The loss of [[eyebrow]]s or [[eyelash]]es.
 
 ====Related terms====
 * {{l|en|madarotic}}
