t+ca:[[bassa del molí]] t-balance ([[WT:EDIT|Assisted]]) <millpond#65017751>

--- a/en/m/millpond.720302.wikitext
+++ b/en/m/millpond.720302.wikitext
@@ -12,10 +12,11 @@
 ====Translations====
 {{trans-top|pond or reservoir}}
 * Bulgarian: {{t|bg|воденичен вир}}
+* Catalan: {{t|ca|bassa del molí|f}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
-* Finnish: {{t|fi|myllylampi}}
 {{trans-mid}}
+* Finnish: {{t|fi|myllylampi}}
 * Galician: {{t|gl|banzado|m}}, {{t+|gl|cubo|m}}, {{t+|gl|presa|f}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
